[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Bully_cannon.png" type="Texture" id=1]
[ext_resource path="res://BullyCannon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 13 )

[node name="BullyCannon" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 19, -3 )

[node name="FireTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DelayTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
